--- a/Contacts/app/src/main/AndroidManifest.xml
+++ b/Contacts/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AboutContact"></activity>
+        <activity android:name=".ContactInfo"></activity>
+        <activity android:name=".NewContact" />
+        <activity android:name=".AboutContact" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
